Ofertas: fix alignment

--- a/client/src/styles/filters.css
+++ b/client/src/styles/filters.css
@@ -46,7 +46,7 @@
         height: unset;
         padding: unset;
     }
-    .ofertas {
+    .ofertas-container {
         text-align: center;
     }
 }
