--- a/client/src/styles/layout.css
+++ b/client/src/styles/layout.css
@@ -40,9 +40,8 @@ body {
     box-shadow: inset 0 0 0 1px #3db219;
 }
 
-.ofertas {
-  padding-left: 80px;
-  padding-right: 40px;
+.ofertas-container {
+    padding: 0 40px;
 }
 
 /*loading spinner*/
